updated project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-react",
+  "name": "Jakob - React Portfolio",
   "version": "0.0.1",
   "private": true,
   "homepage": "https://jakobthefrog.github.io/UXPortfolio",
